--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,12 +4,9 @@ spring:
       on-profile: dev
 
   datasource:
-#    url: ${DB_URL:jdbc:mariadb://mariadb-ver10-01.c3edzk8fothj.ap-northeast-2.rds.amazonaws.com:3306/ZIPSA_DEV?characterEncoding=UTF-8&serverTimezone=Asia/Seoul&useUnicode=true}
-#    username: ${DB_USERNAME:admin}
-#    password: ${DB_PASSWORD:na6080su12!!}
-    url: jdbc:mariadb://teamup.cdif7ibxagzt.ap-northeast-2.rds.amazonaws.com:3306/TeamUp?characterEncoding=UTF-8&serverTimezone=Asia/Seoul&useUnicode=true
-    username: admin
-    password: na6080su12!!
+    url: jdbc:mariadb://${DB_HOST}:${DB_PORT:3306}/TeamUp?characterEncoding=UTF-8&serverTimezone=Asia/Seoul&useUnicode=true
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
     driver-class-name: org.mariadb.jdbc.Driver
 
   jpa:
