--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,11 +11,13 @@ spring:
   logging:
     config: classpath:logback-spring.xml
 
-  token:
+jwt:
+  secret: ${JWT_SECRET_KEY}
+  expire:
     # 5분 (1000 * 60 * 5 = 300000) / 30분 (1000 * 60 * 30 = 1800000) / 1시간 (1000 * 60 * 60 = 3600000)
-    access-expire: 1800000
+    access: 1800000
     # 1일 (1000 * 60 * 24 = 1440000) / 1달 (1000 * 60 * 24 * 31 = 44640000)
-    refresh-expire: 1440000
+    refresh: 1440000
 
 ---
 spring:
