회원가입 기능 일부 구현 & 이메일 보내는 기능 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -53,6 +53,10 @@ spring:
         format_sql: true
     open-in-view: false
 
+aws:
+  ses:
+    send-email: ${SES_SEND_EMAIL}
+
 ---
 spring:
   config:
@@ -81,3 +85,7 @@ spring:
         show_sql: true
         format_sql: true
     open-in-view: false
+
+aws:
+  ses:
+    send-email: ${SES_SEND_EMAIL}
