context-path 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,7 +22,7 @@ jwt:
 server:
   forward-headers-strategy: native    # HttpServletRequest.getRemoteAddr()을 통해 X-Forwarded-For 헤더 정보를 가져오기 위함
   servlet:
-    context-path: /api/web
+    context-path: /teamup/api/web
 
 ---
 spring:
