--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -74,6 +74,7 @@ spring:
         default_batch_fetch_size: 100
         show_sql: true
         format_sql: true
+        dialect: org.hibernate.dialect.MariaDBDialect
     open-in-view: false
 
 aws:
