--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -48,6 +48,12 @@ spring:
         format_sql: true
     open-in-view: false
 
+  data:
+    redis:
+      port: ${REDIS_PORT:6379}
+      host: ${REDIS_HOST}
+      password: ${REDIS_PASSWORD}
+
 aws:
   ses:
     send-email: ${SES_SEND_EMAIL}
@@ -76,6 +82,12 @@ spring:
         format_sql: true
         dialect: org.hibernate.dialect.MariaDBDialect
     open-in-view: false
+
+  data:
+    redis:
+      port: ${REDIS_PORT:6379}
+      host: ${REDIS_HOST}
+      password: ${REDIS_PASSWORD}
 
 aws:
   ses:
