--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,10 @@ java {
 	sourceCompatibility = '21'
 }
 
+ext {
+	set('springCloudVersion', "2023.0.1")
+}
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
@@ -29,7 +33,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.cloud:spring-cloud-starter-aws'
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
