--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -87,8 +87,8 @@ spring:
     properties:
       hibernate:
         default_batch_fetch_size: 100
-        show_sql: true
-        format_sql: true
+        show_sql: false
+        format_sql: false
     open-in-view: false
 
   data:
