--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -46,10 +46,10 @@ spring:
       ddl-auto: validate
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+    show-sql: true
     properties:
       hibernate:
         default_batch_fetch_size: 100
-        show_sql: true
         format_sql: true
     open-in-view: false
 
@@ -84,10 +84,10 @@ spring:
       ddl-auto: validate
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+    show-sql: false
     properties:
       hibernate:
         default_batch_fetch_size: 100
-        show_sql: false
         format_sql: false
     open-in-view: false
 
