--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,6 +30,8 @@ service:
       valid-minute: ${EMAIL_VERIFICATION_CODE_VALID_MIN:10}
     change-password:
       valid-minute: ${CHANGE_PASSWORD_LINK_VALID_MIN:60}
+  profile-image:
+    default-path: profile-image/default.jpeg
 
 ---
 spring:
@@ -68,6 +70,12 @@ cloud:
       secret-key: ${AWS_SECRET_KEY}
     ses:
       send-email: ${SES_SEND_EMAIL}
+    s3:
+      bucket: ${COMMON_DATA_BUCKET}
+    region:
+      static: ${AWS_REGION}
+    stack:
+      auto: false
 
 front:
   base-url: ${FRONT_BASE_URL:https://together-nine.vercel.app}
@@ -105,6 +113,12 @@ cloud:
   aws:
     ses:
       send-email: ${SES_SEND_EMAIL}
+    s3:
+      bucket: ${COMMON_DATA_BUCKET}
+    region:
+      static: ${AWS_REGION}
+    stack:
+      auto: false
 
 front:
   base-url: ${FRONT_BASE_URL:https://together-nine.vercel.app}
