--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,9 @@ dependencies {
 	// apache common lang
 	implementation 'org.apache.commons:commons-lang3:3.14.0'
 
+	// apache common io
+	implementation 'commons-io:commons-io:2.16.1'
+
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	annotationProcessor 'org.projectlombok:lombok'
