--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,7 @@ spring:
   logging:
     config: classpath:logback-spring.xml
 
+  # 메일 서버 관련 설정
   mail:
     host: smtp.mailgun.org
     port: 587
@@ -23,6 +24,13 @@ spring:
           auth: true
           starttls:
             enable: true
+
+  # Redis 관련 설정
+  data:
+    redis:
+      port: ${REDIS_PORT:6379}
+      host: ${REDIS_HOST}
+      password: ${REDIS_PASSWORD:#{null}}
 
 jwt:
   secret: ${JWT_SECRET_KEY}
@@ -57,17 +65,17 @@ service:
 spring:
   config:
     activate:
-      on-profile: dev
+      on-profile: local
 
   datasource:
-    url: jdbc:mariadb://${DB_HOST}:${DB_PORT:3306}/${DB_NAME:teamup}?characterEncoding=UTF-8&serverTimezone=Asia/Seoul&useUnicode=true
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
-    driver-class-name: org.mariadb.jdbc.Driver
+    url: jdbc:h2:mem:teamup         # In-Memory Mode
+    username: SA
+    password:
+    driver-class-name: org.h2.Driver
 
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: create
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     show-sql: true
@@ -76,12 +84,12 @@ spring:
         default_batch_fetch_size: 100
         format_sql: true
     open-in-view: false
+    defer-datasource-initialization: true
 
-  data:
-    redis:
-      port: ${REDIS_PORT:6379}
-      host: ${REDIS_HOST}
-      password: ${REDIS_PASSWORD:#{null}}
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
 
 cloud:
   aws:
@@ -104,6 +112,53 @@ cloud:
 
 front:
   base-url: ${FRONT_BASE_URL:https://together-nine.vercel.app}
+
+---
+spring:
+  config:
+    activate:
+      on-profile: dev
+
+  datasource:
+    url: jdbc:mariadb://${DB_HOST}:${DB_PORT:3306}/${DB_NAME:teamup}?characterEncoding=UTF-8&serverTimezone=Asia/Seoul&useUnicode=true
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
+    driver-class-name: org.mariadb.jdbc.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: validate
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+    show-sql: true
+    properties:
+      hibernate:
+        default_batch_fetch_size: 100
+        format_sql: true
+    open-in-view: false
+
+cloud:
+  aws:
+    credentials:
+      access-key: ${AWS_ACCESS_KEY}
+      secret-key: ${AWS_SECRET_KEY}
+    ses:
+      send-email: ${SEND_EMAIL}
+    s3:
+      bucket: ${COMMON_DATA_BUCKET}
+    region:
+      static: ${AWS_REGION}
+    stack:
+      auto: false
+  cool-sms:
+    credentials:
+      access-key: ${SMS_ACCESS_KEY}
+      secret-key: ${SMS_SECRET_KEY}
+    send-phone: ${SMS_SEND_PHONE}
+
+front:
+  base-url: ${FRONT_BASE_URL:https://together-nine.vercel.app}
+
 ---
 spring:
   config:
@@ -127,12 +182,6 @@ spring:
         default_batch_fetch_size: 100
         format_sql: false
     open-in-view: false
-
-  data:
-    redis:
-      port: ${REDIS_PORT:6379}
-      host: ${REDIS_HOST}
-      password: ${REDIS_PASSWORD:#{null}}
 
 cloud:
   aws:
